--- a/app/javascript/css/groups/new.scss
+++ b/app/javascript/css/groups/new.scss
@@ -1,3 +1,14 @@
+@import 'trix.css';
+
+main {
+  flex-grow: 1;
+}
+
+.groups_create {
+  position: relative;
+  padding: 3rem 2rem;
+}
+
 .select select {
   background-color: #211b17;
   color: #ababab;
@@ -61,4 +72,10 @@
 
 ::-ms-input-placeholder { /* Microsoft Edge */
   color: #ababab;
+}
+
+.trix_editor:active, .trix_editor:focus {
+  border-color:#3273dc;
+  box-shadow: 0 0 0 0.125em
+    rgba(50, 115, 220, 0.25);
 }
