--- a/app/javascript/css/home_page/index.scss
+++ b/app/javascript/css/home_page/index.scss
@@ -1,3 +1,7 @@
+main {
+  flex-grow: 1;
+}
+
 .groups {
   position: relative;
 }
